Added platform-manufacurers. Small changes on csv

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 266,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 267,
    "metadata": {
     "id": "LrSYA9LWmzfq"
    },
@@ -85,6 +85,7 @@
     "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
     "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n",
     "platformsSalesTTLPath = os.path.join(rdfPath, \"platformsSales.ttl\")\n",
+    "platformsManufacturersTTLPath = os.path.join(rdfPath, \"platformsManufacturers.ttl\")\n",
     "\n",
     "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")\n",
     "statsTTLPath = os.path.join(rdfPath, \"stats.ttl\")\n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 268,
    "metadata": {
     "id": "8rWK8cFyruCz"
    },
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 269,
    "metadata": {
     "id": "J3Pw_mt1ruCz"
    },
@@ -159,6 +160,13 @@
     "    return platform.lower().replace(\" \", \"-\").replace(\"/\", \"-\").replace(\"&\", \"-\")\n",
     "\n",
     "\n",
+    "def setCompanyID(company):\n",
+    "    if ' ' in company:\n",
+    "        return company.replace(' ', '-').lower()\n",
+    "        #return company.replace(' ', '-', regex=True).str.lower()\n",
+    "    return company.lower()\n",
+    "\n",
+    "\n",
     "def setDeveloperID(developer):\n",
     "    return developer.replace(' ', '-', regex=True).str.lower()\n",
     "\n",
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 270,
    "metadata": {
     "id": "U8LlSWkZruC0"
    },
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 271,
    "metadata": {
     "id": "2FNvk7RTruC0"
    },
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 272,
    "metadata": {
     "id": "I07K-83_ruC0"
    },
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 273,
    "metadata": {
     "id": "A6W6ailyruC1",
     "outputId": "907e170f-07d8-403a-db97-375eb8cfe650"
@@ -329,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 274,
    "metadata": {
     "id": "Iq5up3yxruC1"
    },
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 275,
    "metadata": {
     "id": "JIm43S8ZruC1"
    },
@@ -363,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 276,
    "metadata": {
     "id": "Y5aZLe9bruC2"
    },
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 277,
    "metadata": {
     "id": "yX0sNK0IruC2"
    },
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 278,
    "metadata": {
     "id": "FPGiytrTruC2"
    },
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 279,
    "metadata": {
     "id": "9Dxz7tEOruC2"
    },
@@ -447,6 +455,58 @@
     "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "outputs": [],
+   "source": [
+    "# Create Graph\n",
+    "g = createGraph()\n",
+    "\n",
+    "manufacturerDict = {}\n",
+    "for platform, row in platforms.iterrows():\n",
+    "    Platform = URIRef(HLTB[setPlatformID(platform)])\n",
+    "\n",
+    "    # add the manufacturer name\n",
+    "    if pd.notna(row[\"Manufacturer\"]) or pd.notnull(row[\"Manufacturer\"]):\n",
+    "        manufacturerStr = row[\"Manufacturer\"].lstrip().rstrip()\n",
+    "        if ',' in manufacturerStr:\n",
+    "            manufacturerStr = manufacturerStr.replace(',', '/')\n",
+    "        manufacturerSplit = manufacturerStr.split('/')\n",
+    "        for elem in manufacturerSplit:\n",
+    "            elem = elem.lstrip()\n",
+    "            manufacturerName = \"\"\n",
+    "            manufacturerCountry = \"\"\n",
+    "            if '(' in elem:\n",
+    "                elemSplit = elem.split('(')\n",
+    "                manufacturerName = elemSplit[0].lstrip().rstrip()\n",
+    "                manufacturerCountry = elemSplit[1].lstrip().rstrip()\n",
+    "                if not manufacturerName[-1].isalnum():\n",
+    "                    manufacturerName = manufacturerName[:-1]\n",
+    "                if manufacturerCountry[-1] == ')':\n",
+    "                    manufacturerCountry = manufacturerCountry[:-1]\n",
+    "                manufacturerDict[manufacturerName] = manufacturerCountry\n",
+    "            if manufacturerName != \"\" and manufacturerCountry != \"\":\n",
+    "                Company = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
+    "                g.add((Platform, HLTB[\"createdBy\"], Company))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "outputs": [],
+   "source": [
+    "# Save data in the Turtle format\n",
+    "with open(platformsManufacturersTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "    fp.write(g.serialize(format=\"turtle\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -459,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 282,
    "metadata": {
     "id": "I68ymABrruC2"
    },
@@ -479,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 283,
    "metadata": {
     "id": "ttf7puJwruC2"
    },
@@ -517,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 284,
    "metadata": {
     "id": "JupeUh_YruC2",
     "outputId": "a3e1cf27-ace3-404c-ca9b-5a6e385c5b55"
@@ -551,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 285,
    "metadata": {
     "id": "VoXuJ8QPruC3"
    },
@@ -567,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 286,
    "metadata": {
     "id": "MVFwUsK1ruC3"
    },
@@ -619,14 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 287,
    "metadata": {
     "id": "QnD2FYA-ruC3",
     "outputId": "f8c273c3-e30c-4310-b450-f55ca63c3ca4"
@@ -636,7 +696,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved company TTL file.\n"
+      "Saved game-sales TTL file.\n"
      ]
     }
    ],
@@ -645,7 +705,7 @@
     "with open(gameSalesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))\n",
     "\n",
-    "print(\"Saved company TTL file.\")"
+    "print(\"Saved game-sales TTL file.\")"
    ]
   },
   {
@@ -659,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 288,
    "metadata": {
     "id": "-Z3-vXofruC3"
    },
@@ -674,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 289,
    "metadata": {
     "id": "3WglgCByruC3"
    },
@@ -707,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 290,
    "metadata": {
     "id": "Qx1fjKBUruC4"
    },
@@ -718,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 291,
    "metadata": {
     "id": "fSebeiW4ruC4"
    },
@@ -741,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 292,
    "metadata": {
     "id": "dbKlh6J9ozNy",
     "outputId": "9c3659ad-c271-402f-863c-2aea7d2d9890"
@@ -772,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,16 +842,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<Graph identifier=N5f95be725f8d4fd8a3963489fe6ae1e9 (<class 'rdflib.graph.Graph'>)>"
-      ]
+      "text/plain": "<Graph identifier=Nc6f65868765945719289f1cac7b9277b (<class 'rdflib.graph.Graph'>)>"
      },
-     "execution_count": 126,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +924,7 @@
     "\n",
     "#countriesregions.info()\n",
     "for index, row in countriesregions.iterrows():\n",
-    "    \n",
+    "\n",
     "    for c in str(row['Country']).split(','):\n",
     "        cName = c.strip()\n",
     "\n",
@@ -880,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,25 +992,22 @@
     "\n",
     "        if pd.notna(row[\"Japan\"]):\n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"jp\"])\n",
-    "       \n",
+    "\n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"Japan\"], datatype=XSD.float)))\n",
     "            g.add((PlatformSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"jp\"])))\n",
     "            g.add((PlatformSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
     "        if pd.notna(row[\"North America\"]):\n",
-    "            \n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"na\"])\n",
-    "            \n",
+    "\n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"North America\"], datatype=XSD.float)))\n",
     "            g.add((PlatformSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"na\"])))\n",
     "            g.add((PlatformSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
     "        if pd.notna(row[\"Rest of World\"]):\n",
-    "           \n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"other\"])\n",
-    "\n",
     "\n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"Rest of World\"], datatype=XSD.float)))\n",
@@ -969,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": []
