add global to region

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 137,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 138,
    "metadata": {
     "id": "LrSYA9LWmzfq"
    },
@@ -85,7 +85,6 @@
     "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
     "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n",
     "platformsSalesTTLPath = os.path.join(rdfPath, \"platformsSales.ttl\")\n",
-    "platformsManufacturersTTLPath = os.path.join(rdfPath, \"platformsManufacturers.ttl\")\n",
     "\n",
     "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")\n",
     "statsTTLPath = os.path.join(rdfPath, \"stats.ttl\")\n",
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 139,
    "metadata": {
     "id": "8rWK8cFyruCz"
    },
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 140,
    "metadata": {
     "id": "J3Pw_mt1ruCz"
    },
@@ -160,13 +159,6 @@
     "    return platform.lower().replace(\" \", \"-\").replace(\"/\", \"-\").replace(\"&\", \"-\")\n",
     "\n",
     "\n",
-    "def setCompanyID(company):\n",
-    "    if ' ' in company:\n",
-    "        return company.replace(' ', '-').lower()\n",
-    "        #return company.replace(' ', '-', regex=True).str.lower()\n",
-    "    return company.lower()\n",
-    "\n",
-    "\n",
     "def setDeveloperID(developer):\n",
     "    return developer.replace(' ', '-', regex=True).str.lower()\n",
     "\n",
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 5,
    "metadata": {
     "id": "U8LlSWkZruC0"
    },
@@ -211,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 6,
    "metadata": {
     "id": "2FNvk7RTruC0"
    },
@@ -227,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "metadata": {
     "id": "I07K-83_ruC0"
    },
@@ -302,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 8,
    "metadata": {
     "id": "A6W6ailyruC1",
     "outputId": "907e170f-07d8-403a-db97-375eb8cfe650"
@@ -337,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 9,
    "metadata": {
     "id": "Iq5up3yxruC1"
    },
@@ -352,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "metadata": {
     "id": "JIm43S8ZruC1"
    },
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 11,
    "metadata": {
     "id": "Y5aZLe9bruC2"
    },
@@ -393,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 12,
    "metadata": {
     "id": "yX0sNK0IruC2"
    },
@@ -407,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 13,
    "metadata": {
     "id": "FPGiytrTruC2"
    },
@@ -445,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 14,
    "metadata": {
     "id": "9Dxz7tEOruC2"
    },
@@ -455,58 +447,6 @@
     "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 280,
-   "outputs": [],
-   "source": [
-    "# Create Graph\n",
-    "g = createGraph()\n",
-    "\n",
-    "manufacturerDict = {}\n",
-    "for platform, row in platforms.iterrows():\n",
-    "    Platform = URIRef(HLTB[setPlatformID(platform)])\n",
-    "\n",
-    "    # add the manufacturer name\n",
-    "    if pd.notna(row[\"Manufacturer\"]) or pd.notnull(row[\"Manufacturer\"]):\n",
-    "        manufacturerStr = row[\"Manufacturer\"].lstrip().rstrip()\n",
-    "        if ',' in manufacturerStr:\n",
-    "            manufacturerStr = manufacturerStr.replace(',', '/')\n",
-    "        manufacturerSplit = manufacturerStr.split('/')\n",
-    "        for elem in manufacturerSplit:\n",
-    "            elem = elem.lstrip()\n",
-    "            manufacturerName = \"\"\n",
-    "            manufacturerCountry = \"\"\n",
-    "            if '(' in elem:\n",
-    "                elemSplit = elem.split('(')\n",
-    "                manufacturerName = elemSplit[0].lstrip().rstrip()\n",
-    "                manufacturerCountry = elemSplit[1].lstrip().rstrip()\n",
-    "                if not manufacturerName[-1].isalnum():\n",
-    "                    manufacturerName = manufacturerName[:-1]\n",
-    "                if manufacturerCountry[-1] == ')':\n",
-    "                    manufacturerCountry = manufacturerCountry[:-1]\n",
-    "                manufacturerDict[manufacturerName] = manufacturerCountry\n",
-    "            if manufacturerName != \"\" and manufacturerCountry != \"\":\n",
-    "                Company = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
-    "                g.add((Platform, HLTB[\"createdBy\"], Company))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 281,
-   "outputs": [],
-   "source": [
-    "# Save data in the Turtle format\n",
-    "with open(platformsManufacturersTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
-    "    fp.write(g.serialize(format=\"turtle\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "markdown",
@@ -519,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 15,
    "metadata": {
     "id": "I68ymABrruC2"
    },
@@ -539,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 16,
    "metadata": {
     "id": "ttf7puJwruC2"
    },
@@ -577,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 17,
    "metadata": {
     "id": "JupeUh_YruC2",
     "outputId": "a3e1cf27-ace3-404c-ca9b-5a6e385c5b55"
@@ -611,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 18,
    "metadata": {
     "id": "VoXuJ8QPruC3"
    },
@@ -627,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 19,
    "metadata": {
     "id": "MVFwUsK1ruC3"
    },
@@ -679,14 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 20,
    "metadata": {
     "id": "QnD2FYA-ruC3",
     "outputId": "f8c273c3-e30c-4310-b450-f55ca63c3ca4"
@@ -696,7 +636,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved game-sales TTL file.\n"
+      "Saved company TTL file.\n"
      ]
     }
    ],
@@ -705,7 +645,7 @@
     "with open(gameSalesTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))\n",
     "\n",
-    "print(\"Saved game-sales TTL file.\")"
+    "print(\"Saved company TTL file.\")"
    ]
   },
   {
@@ -719,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 21,
    "metadata": {
     "id": "-Z3-vXofruC3"
    },
@@ -734,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 22,
    "metadata": {
     "id": "3WglgCByruC3"
    },
@@ -767,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 23,
    "metadata": {
     "id": "Qx1fjKBUruC4"
    },
@@ -778,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 24,
    "metadata": {
     "id": "fSebeiW4ruC4"
    },
@@ -801,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 25,
    "metadata": {
     "id": "dbKlh6J9ozNy",
     "outputId": "9c3659ad-c271-402f-863c-2aea7d2d9890"
@@ -832,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,19 +782,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<Graph identifier=Nc6f65868765945719289f1cac7b9277b (<class 'rdflib.graph.Graph'>)>"
+      "text/plain": [
+       "<Graph identifier=Ncae72ebc896244c0bf9fe611c3e47841 (<class 'rdflib.graph.Graph'>)>"
+      ]
      },
-     "execution_count": 294,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "# Create the node to add to the Graph\n",
     "Region = URIRef(HLTB['eu'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
@@ -870,12 +813,16 @@
     "\n",
     "Region = URIRef(HLTB['other'])\n",
     "g.add((Region, RDF.type, HLTB.Region))\n",
-    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('other', datatype=XSD.string)))\n"
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('other', datatype=XSD.string)))\n",
+    "\n",
+    "Region = URIRef(HLTB['global'])\n",
+    "g.add((Region, RDF.type, HLTB.Region))\n",
+    "g.add((Region, HLTB[{'eu', 'jp', 'na', 'other', 'global'}], Literal('global', datatype=XSD.string)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +871,7 @@
     "\n",
     "#countriesregions.info()\n",
     "for index, row in countriesregions.iterrows():\n",
-    "\n",
+    "    \n",
     "    for c in str(row['Country']).split(','):\n",
     "        cName = c.strip()\n",
     "\n",
@@ -938,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,22 +939,25 @@
     "\n",
     "        if pd.notna(row[\"Japan\"]):\n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"jp\"])\n",
-    "\n",
+    "       \n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"Japan\"], datatype=XSD.float)))\n",
     "            g.add((PlatformSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"jp\"])))\n",
     "            g.add((PlatformSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
     "        if pd.notna(row[\"North America\"]):\n",
+    "            \n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"na\"])\n",
-    "\n",
+    "            \n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"North America\"], datatype=XSD.float)))\n",
     "            g.add((PlatformSalesID, HLTB[\"locatedIn\"], URIRef(HLTB[\"na\"])))\n",
     "            g.add((PlatformSalesID, HLTB[\"onPlatform\"], URIRef(HLTB[setPlatformID(row[\"Platform\"])])))\n",
     "\n",
     "        if pd.notna(row[\"Rest of World\"]):\n",
+    "           \n",
     "            PlatformSalesID = URIRef(HLTB[\"sales-\" + str(setPlatformID(row[\"Platform\"])) + \"___\" + \"other\"])\n",
+    "\n",
     "\n",
     "            g.add((PlatformSalesID, HLTB.Type, HLTB.Sale))\n",
     "            g.add((PlatformSalesID, HLTB[\"unitsSold\"], Literal(row[\"Rest of World\"], datatype=XSD.float)))\n",
@@ -1024,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
