Updated ontology file. Modified platform-manufacturer.

--- a/HLTB_RDF_Creator.ipynb
+++ b/HLTB_RDF_Creator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 32,
    "metadata": {
     "id": "JXZwhL0Bmzfp"
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 33,
    "metadata": {
     "id": "LrSYA9LWmzfq"
    },
@@ -85,8 +85,6 @@
     "companyTTLPath = os.path.join(rdfPath, \"company.ttl\")\n",
     "platformsTTLPath = os.path.join(rdfPath, \"platforms.ttl\")\n",
     "platformsSalesTTLPath = os.path.join(rdfPath, \"platformsSales.ttl\")\n",
-    "platformsManufacturersTTLPath = os.path.join(rdfPath, \"platformsManufacturers.ttl\")\n",
-    "\n",
     "videoGameDevelopersTTLPath = os.path.join(rdfPath, \"videoGameDevelopers.ttl\")\n",
     "statsTTLPath = os.path.join(rdfPath, \"stats.ttl\")\n",
     "gameSalesTTLPath = os.path.join(rdfPath, \"gameSales.ttl\")\n",
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 34,
    "metadata": {
     "id": "8rWK8cFyruCz"
    },
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 35,
    "metadata": {
     "id": "J3Pw_mt1ruCz"
    },
@@ -163,7 +161,6 @@
     "def setCompanyID(company):\n",
     "    if ' ' in company:\n",
     "        return company.replace(' ', '-').lower()\n",
-    "        #return company.replace(' ', '-', regex=True).str.lower()\n",
     "    return company.lower()\n",
     "\n",
     "\n",
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 36,
    "metadata": {
     "id": "U8LlSWkZruC0"
    },
@@ -211,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 37,
    "metadata": {
     "id": "2FNvk7RTruC0"
    },
@@ -227,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 38,
    "metadata": {
     "id": "I07K-83_ruC0"
    },
@@ -302,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 39,
    "metadata": {
     "id": "A6W6ailyruC1",
     "outputId": "907e170f-07d8-403a-db97-375eb8cfe650"
@@ -337,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 40,
    "metadata": {
     "id": "Iq5up3yxruC1"
    },
@@ -352,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 41,
    "metadata": {
     "id": "JIm43S8ZruC1"
    },
@@ -371,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 42,
    "metadata": {
     "id": "Y5aZLe9bruC2"
    },
@@ -393,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 43,
    "metadata": {
     "id": "yX0sNK0IruC2"
    },
@@ -407,12 +404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 44,
    "metadata": {
     "id": "FPGiytrTruC2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Panasonic': 'Japan', 'Sanyo': 'Japan', 'GoldStar': 'South Korea', 'Commodore': 'Canada', 'Atari Inc': 'U.S.', 'Atari Corporation': 'U.S.', 'Coleco': 'U.S.', 'Sega': 'Japan', 'Fujitsu': 'Japan', 'Mattel Electronics': 'U.S.', 'Nintendo': 'Japan', 'Magnavox': 'U.S.', 'Philips': 'Netherlands', 'Sony': 'Japan', 'Tec Toy': 'Brazil', 'Majesco Entertainment': 'Japan', 'Microsoft': 'U.S.', 'Zeebo Inc': 'U.S.'}\n"
+     ]
+    }
+   ],
    "source": [
+    "manufacturerDict = {}\n",
+    "\n",
     "for platform, row in platforms.iterrows():\n",
     "    Platform = URIRef(HLTB[setPlatformID(platform)])\n",
     "    #Add triples using store's add() method.\n",
@@ -440,33 +447,7 @@
     "\n",
     "    #Add acronym information\n",
     "    if pd.notna(row[\"Acronym\"]):\n",
-    "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"], datatype=XSD.string)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 279,
-   "metadata": {
-    "id": "9Dxz7tEOruC2"
-   },
-   "outputs": [],
-   "source": [
-    "# Save data in the Turtle format\n",
-    "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
-    "    fp.write(g.serialize(format=\"turtle\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 280,
-   "outputs": [],
-   "source": [
-    "# Create Graph\n",
-    "g = createGraph()\n",
-    "\n",
-    "manufacturerDict = {}\n",
-    "for platform, row in platforms.iterrows():\n",
-    "    Platform = URIRef(HLTB[setPlatformID(platform)])\n",
+    "        g.add((Platform, HLTB[\"acronym\"], Literal(row[\"Acronym\"], datatype=XSD.string)))\n",
     "\n",
     "    # add the manufacturer name\n",
     "    if pd.notna(row[\"Manufacturer\"]) or pd.notnull(row[\"Manufacturer\"]):\n",
@@ -488,25 +469,24 @@
     "                    manufacturerCountry = manufacturerCountry[:-1]\n",
     "                manufacturerDict[manufacturerName] = manufacturerCountry\n",
     "            if manufacturerName != \"\" and manufacturerCountry != \"\":\n",
-    "                Company = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
-    "                g.add((Platform, HLTB[\"createdBy\"], Company))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "                manufacturer = URIRef(HLTB[setCompanyID(manufacturerName)])\n",
+    "                g.add((Platform, HLTB[\"createdBy\"], manufacturer))\n",
+    "            # match manufacturer with companies\n",
+    "print(manufacturerDict)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 45,
+   "metadata": {
+    "id": "9Dxz7tEOruC2"
+   },
    "outputs": [],
    "source": [
     "# Save data in the Turtle format\n",
-    "with open(platformsManufacturersTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
+    "with open(platformsTTLPath, \"w\", encoding=\"utf-8\") as fp:\n",
     "    fp.write(g.serialize(format=\"turtle\"))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -519,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 46,
    "metadata": {
     "id": "I68ymABrruC2"
    },
@@ -539,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 47,
    "metadata": {
     "id": "ttf7puJwruC2"
    },
@@ -577,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 48,
    "metadata": {
     "id": "JupeUh_YruC2",
     "outputId": "a3e1cf27-ace3-404c-ca9b-5a6e385c5b55"
@@ -611,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 49,
    "metadata": {
     "id": "VoXuJ8QPruC3"
    },
@@ -627,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 50,
    "metadata": {
     "id": "MVFwUsK1ruC3"
    },
@@ -679,14 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 51,
    "metadata": {
     "id": "QnD2FYA-ruC3",
     "outputId": "f8c273c3-e30c-4310-b450-f55ca63c3ca4"
@@ -719,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 52,
    "metadata": {
     "id": "-Z3-vXofruC3"
    },
@@ -734,19 +707,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 53,
    "metadata": {
     "id": "3WglgCByruC3"
    },
    "outputs": [],
    "source": [
+    "#companies=[]\n",
     "#replace space with -, lower case\n",
     "indiegamesdevelopers['companyID'] = setDeveloperID(indiegamesdevelopers['Developer'])\n",
+    "#indiegamesdevelopers['companyID'] = setCompanyID(indiegamesdevelopers['Developer'])\n",
+    "\n",
     "\n",
     "#indiegamesdevelopers.info()\n",
     "for index, row in indiegamesdevelopers.iterrows():\n",
     "    # Create the node to add to the Graph\n",
     "    Company = URIRef(HLTB[row['companyID']])\n",
+    "    #companies.append(Company)\n",
     "\n",
     "    # Add triples using store's add() method.\n",
     "    g.add((Company, RDF.type, HLTB.Company))\n",
@@ -762,12 +739,12 @@
     "id": "06I0sgugruC3"
    },
    "source": [
-    "### video-game-evelopers"
+    "### video-game-developers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 54,
    "metadata": {
     "id": "Qx1fjKBUruC4"
    },
@@ -778,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 55,
    "metadata": {
     "id": "fSebeiW4ruC4"
    },
@@ -786,11 +763,14 @@
    "source": [
     "#replace space with -, lower case\n",
     "videoGameDevelopers['companyID'] = setDeveloperID(videoGameDevelopers['Developer'])\n",
+    "#videoGameDevelopers['companyID'] = setCompanyID(videoGameDevelopers['Developer'])\n",
+    "\n",
     "\n",
     "#indiegamesdevelopers.info()\n",
     "for index, row in videoGameDevelopers.iterrows():\n",
     "    # Create the node to add to the Graph\n",
     "    Company = URIRef(HLTB[row['companyID']])\n",
+    "    #companies.append(Company)\n",
     "\n",
     "    # Add triples using store's add() method.\n",
     "    g.add((Company, RDF.type, HLTB.Company))\n",
@@ -801,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 56,
    "metadata": {
     "id": "dbKlh6J9ozNy",
     "outputId": "9c3659ad-c271-402f-863c-2aea7d2d9890"
@@ -832,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,14 +822,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<Graph identifier=Nc6f65868765945719289f1cac7b9277b (<class 'rdflib.graph.Graph'>)>"
+      "text/plain": "<Graph identifier=Ne85290bb3552426ca0160dbe98d87376 (<class 'rdflib.graph.Graph'>)>"
      },
-     "execution_count": 294,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": []
